# SpigotPlusPlus

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.gradle  settings.gradle
.github/workflows/: c-cpp.yml  codeql-analysis.yml
src/cpp/include/: CPPLink.h  SpigotPlusPlus.h
src/cpp/include/jvm/: JavaClass.h  JavaConstructor.h  JavaEnv.h  JavaField.h  JavaMethod.h  JavaObject.h  JavaStaticField.h  JavaStaticMethod.h  JavaType.h  JavaUtil.h
src/cpp/include/spigot/: CPPPlugin.h  Logger.h  PluginDescriptionFile.h
src/cpp/include/util/: Util.h
src/cpp/src/: CMakeLists.txt  CPPLink.cpp  SpigotPlusPlus.cpp
src/cpp/src/jvm/: CMakeLists.txt  JavaClass.cpp  JavaConstructor.cpp  JavaEnv.cpp  JavaField.cpp  JavaMethod.cpp  JavaObject.cpp  JavaStaticField.cpp  JavaStaticMethod.cpp  JavaType.cpp  JavaUtil.cpp
src/cpp/src/spigot/: CMakeLists.txt  CPPPlugin.cpp  Logger.cpp  PluginDescriptionFile.cpp
src/cpp/src/util/: CMakeLists.txt  Util.cpp
src/main/java/fr/bastoup/spigotplusplus/: SpigotPlusPlus.java
src/main/java/fr/bastoup/spigotplusplus/link/: CPPLink.java
src/main/java/fr/bastoup/spigotplusplus/plugin/: CPPPlugin.java  CPPPluginLoader.java  CPPPluginZip.java
src/main/java/fr/bastoup/spigotplusplus/util/: CPPNativeUtil.java  OSInfo.java
src/main/resources/: plugin.yml
